# FLS-Library-Codes

./: LICENSE  README.md
Cmake/: CMakeLists.txt
FLS_Library_Gui/FLS_Library_Gui/: FLS_Library_Gui.pro  FLS_Library_Gui.pro.user.3.2-pre1  FLS_Library_Gui.pro.user.b6890e5  addrulesdialog.cpp  addrulesdialog.h  addrulesdialog.ui  inmfsdialog.cpp  inmfsdialog.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  intabledialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  outmfsdialog.cpp  outmfsdialog.h  outmfsdialog.ui  outputdialog.cpp  outputdialog.h  outputdialog.ui  outtabledialog.cpp  outtabledialog.h  ruledialog.cpp  ruledialog.h  ruledialog.ui
FLS_Library_Gui/FLS_Library_Gui/forms/: inmfsdialog.ui  mainwindow.ui  outtabledialog.ui
FLS_Library_Gui/FLS_Library_Gui/include/: addrulesdialog.h  intabledialog.h  outmfsdialog.h  outputdialog.h
FLS_Library_Gui/FLS_Library_Gui/src/: addrulesdialog.cpp  inmfsdialog.cpp  intabledialog.cpp  main.cpp  mainwindow.cpp  outputdialog.cpp  ruledialog.cpp
FLS_Library_Gui/binaries/: TestXML.xml  myxml.xml
FLS_Library_Gui/build-FLS_Library_Gui-Desktop-Debug/: FLS_Library_Gui  Makefile  moc_addrulesdialog.cpp  moc_inmfsdialog.cpp  moc_inputdialog.cpp  moc_intabledialog.cpp  moc_mainwindow.cpp  moc_outmfsdialog.cpp  moc_outputdialog.cpp  moc_outtabledialog.cpp  moc_ruledialog.cpp  ui_addrulesdialog.h  ui_inmfsdialog.h  ui_inputdialog.h  ui_intabledialog.h  ui_mainwindow.h  ui_outmfsdialog.h  ui_outputdialog.h  ui_outtabledialog.h  ui_ruledialog.h
FLS_Library_Gui/build-FLS_Library_Gui-Desktop_Qt_5_9_1_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_addrulesdialog.h  ui_inmfsdialog.h  ui_inputdialog.h  ui_intabledialog.h  ui_mainwindow.h  ui_outmfsdialog.h  ui_outputdialog.h  ui_outtabledialog.h  ui_ruledialog.h
FLS_Library_Gui/build-FLS_Library_Gui-Desktop_Qt_5_9_1_MSVC2015_64bit-Debug/debug/: FLS_Library_Gui.ilk  moc_addrulesdialog.cpp  moc_inmfsdialog.cpp  moc_inputdialog.cpp  moc_intabledialog.cpp  moc_mainwindow.cpp  moc_outmfsdialog.cpp  moc_outputdialog.cpp  moc_outtabledialog.cpp  moc_ruledialog.cpp
FLS_Library_Gui/source_code/: CMakeLists.txt  FLS_Library_Gui.pro  MetaRecord.cpp  XMLReader.cpp  XMLReader.h  XMLWriter.cpp  XMLWriter.h  addrulesdialog.h  commondef.h  inmfsdialog.h  inmfsdialog.ui  inputdialog.cpp  inputdialog.h  inputdialog.ui  intabledialog.cpp  intabledialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outmfsdialog.h  outputdialog.cpp  outputdialog.h  outtabledialog.cpp  outtabledialog.h  ruledialog.cpp  ruledialog.h
include/: FLS.h  MetaRecord.h  T2_MF.h  XMLReader.h  commondef.h  defuzz.h  flsconfig.h  flslib.h  fuzz.h  fuzzyparam.h  gaussMF.h  infer.h  trapMF.h  triMF.h  type1mfs.h  type2mfs.h
src/: Example2.xml  FLS.cpp  MetaRecord.cpp  T2_MF.cpp  XMLReader.cpp  defuzz.cpp  flslib.cpp  fuzz.cpp  gaussMF.cpp  infer.cpp  test.cpp  trapMF.cpp  triMF.cpp  type1mfs.cpp  type2mfs.cpp
